# Fluid-Simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  physics  physics.ir  shaders.metallib
src/: constants.h  includes.h  main.cpp  settings.h  simulation.metal
src/engine/: compute.cpp  engine.cpp  engine.h  init.cpp  utils.cpp
src/objects/: particle.cpp  particle.h
src/render/: display.cpp  display.h
